[package]
name = "random-pedersen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["tracing"] }
bulletproofs = "4.0.0"
byteorder = "1.5.0"
curve25519-dalek-ng = { version = "4.1.1", features = ["serde"] }
futures = "0.3.28"
moka = { version = "0.12.1", features = ["future"] }
once_cell = "1.18.0"
reqwest = { version = "0.11.22", features = ["json"] }
ring = "0.17.3"
serde = { version = "1.0.189", features = ["derive"] }
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.4.4", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = "1.4.1"
serde_json = "1.0.107"
serde_with = "3.3.0"

[dev-dependencies]
mockito = "1.2.0"
axum-test = "12.5.1"
axum-test-helper = "0.3.0"
reqwest = { version = "0.11.22", features = ["json", "blocking"] }
more-asserts = "0.3.1"